--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Get Weather Conditions</title>
+    <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet" />
 </head>
 <body>
+    <h1>Get Weather Conditions</h1>
+    <form action="/weather">
+        <input type="text" name="city" id="city" placeholder="Enter a city" />
+        <button type="submit">Submit</button>
+    </form>
 
 </body>
 </html>
